--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -5,10 +5,11 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    tools:context="com.example.aman.hospitalappointy.LoginActivity">
+    tools:context="com.example.aman.hospitalappointy.auth.LoginActivity">
 
-    <include layout="@layout/app_bar_layout"
-        android:id="@+id/login_toolbar"/>
+    <include
+        android:id="@+id/login_toolbar"
+        layout="@layout/app_bar_layout" />
 
     <ScrollView
         android:layout_width="match_parent"
@@ -23,95 +24,95 @@
             <ImageView
                 android:layout_width="wrap_content"
                 android:layout_height="0dp"
+                android:layout_gravity="center"
                 android:layout_weight="2"
-                android:src="@mipmap/logo"
-                android:layout_gravity="center"/>
+                android:src="@mipmap/logo" />
 
             <android.support.design.widget.TextInputLayout
                 android:id="@+id/login_email_layout"
                 android:layout_width="match_parent"
                 android:layout_height="0dp"
-                android:layout_weight="1.5"
-                >
+                android:layout_weight="1.5">
 
                 <android.support.design.widget.TextInputEditText
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:hint="Email"
-                    android:inputType="textEmailAddress"/>
+                    android:inputType="textEmailAddress" />
             </android.support.design.widget.TextInputLayout>
 
             <android.support.design.widget.TextInputLayout
                 android:id="@+id/login_password_layout"
                 android:layout_width="match_parent"
                 android:layout_height="0dp"
-                android:layout_weight="1.5"
-                >
+                android:layout_weight="1.5">
 
                 <android.support.design.widget.TextInputEditText
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:hint="Password"
-                    android:inputType="textPassword"/>
+                    android:inputType="textPassword" />
             </android.support.design.widget.TextInputLayout>
 
             <LinearLayout
                 android:layout_width="wrap_content"
                 android:layout_height="0dp"
-                android:layout_weight="2"
                 android:layout_gravity="right"
-                android:orientation="horizontal"
-                >
+                android:layout_weight="2"
+                android:orientation="horizontal">
 
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="Forgot Password ?"
                     android:textColorLink="@android:color/background_dark" />
+
                 <Button
                     android:id="@+id/login_forgot_button"
+                    style="@style/Widget.AppCompat.Button.Borderless"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="Click Here"
-                    android:textStyle="bold"
                     android:textColor="@color/colorPrimaryDark"
-                    style="@style/Widget.AppCompat.Button.Borderless"/>
+                    android:textStyle="bold" />
 
             </LinearLayout>
+
             <Button
                 android:id="@+id/login_button"
-                android:layout_marginLeft="20dp"
-                android:layout_marginRight="20dp"
                 android:layout_width="match_parent"
                 android:layout_height="0dp"
+                android:layout_marginLeft="20dp"
+                android:layout_marginRight="20dp"
                 android:layout_weight="1"
                 android:background="@drawable/button_background"
                 android:text="LOG IN"
-                android:textSize="20dp"
                 android:textColor="#FFFFFF"
-                android:textStyle="bold"/>
+                android:textSize="20dp"
+                android:textStyle="bold" />
 
             <LinearLayout
                 android:layout_width="wrap_content"
                 android:layout_height="0dp"
-                android:layout_weight="2"
-                android:orientation="horizontal"
+                android:layout_gravity="center"
                 android:layout_marginTop="20dp"
-                android:layout_gravity="center">
+                android:layout_weight="2"
+                android:orientation="horizontal">
 
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="Don't Have Account ?"
                     android:textColorLink="@android:color/background_dark" />
+
                 <Button
                     android:id="@+id/login_register_button"
+                    style="@style/Widget.AppCompat.Button.Borderless"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="Click Here"
-                    android:textStyle="bold"
                     android:textColor="@color/colorPrimaryDark"
-                    style="@style/Widget.AppCompat.Button.Borderless"/>
+                    android:textStyle="bold" />
             </LinearLayout>
         </LinearLayout>
 
