--- a/app/src/main/res/layout/fragment_date.xml
+++ b/app/src/main/res/layout/fragment_date.xml
@@ -1,11 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:id="@+id/fragment_date"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/dateFragment"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    xmlns:tools="http://schemas.android.com/tools"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    tools:context="com.example.aman.hospitalappointy.Fragment_Doctor">
+    tools:context="com.example.aman.hospitalappointy.home.fragments.DoctorFragment">
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -20,27 +19,27 @@
             <TextView
                 android:id="@+id/date_selected_date"
                 android:layout_width="0dp"
-                android:layout_weight="1"
                 android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:gravity="center"
                 android:text="Selected Date"
-                android:textStyle="bold|italic"
                 android:textColor="#ffffff"
                 android:textSize="20dp"
-                android:gravity="center"
-                android:visibility="gone"/>
+                android:textStyle="bold|italic"
+                android:visibility="gone" />
 
             <TextView
                 android:id="@+id/date_select_date"
                 android:layout_width="0dp"
-                android:layout_weight="1"
                 android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:gravity="center"
                 android:padding="5dp"
                 android:text="Select Date"
                 android:textColor="#ffffff"
-                android:textStyle="bold|italic"
                 android:textSize="20dp"
-                android:gravity="center"
-                android:visibility="visible"/>
+                android:textStyle="bold|italic"
+                android:visibility="visible" />
         </LinearLayout>
 
         <LinearLayout
@@ -56,8 +55,7 @@
                 android:gravity="center"
                 android:text="Available Doctor on Selected Date"
                 android:textStyle="bold"
-                android:visibility="gone"
-                />
+                android:visibility="gone" />
 
             <android.support.v7.widget.RecyclerView
                 android:id="@+id/date_doctorList_recyclerView"
