--- a/app/src/main/res/layout/singel_specialization_list.xml
+++ b/app/src/main/res/layout/singel_specialization_list.xml
@@ -1,17 +1,16 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:orientation="vertical"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content">
+    android:layout_height="wrap_content"
+    android:orientation="vertical">
 
     <android.support.v7.widget.CardView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:translationZ="10dp"
-        android:elevation="100dp"
         android:layout_margin="5dp"
-        app:cardCornerRadius="10dp">
+        app:cardCornerRadius="10dp"
+        app:cardElevation="4dp">
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -22,9 +21,9 @@
                 android:layout_width="0dp"
                 android:layout_height="70dp"
                 android:layout_weight="1"
-                app:srcCompat="@mipmap/stethoscope"
+                android:padding="5dp"
                 android:src="@mipmap/stethoscope"
-                android:padding="5dp"/>
+                app:srcCompat="@mipmap/stethoscope" />
 
             <LinearLayout
                 android:layout_width="0dp"
@@ -41,12 +40,12 @@
                         android:id="@+id/special_id_single_user"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:text="Specialization"
-                        android:textColor="@color/most_button_Used"
-                        android:textStyle="bold"
-                        android:textSize="16dp"
                         android:layout_gravity="center"
                         android:padding="10dp"
+                        android:text="Specialization"
+                        android:textColor="@color/most_button_Used"
+                        android:textSize="16dp"
+                        android:textStyle="bold"
 
                         />
 
@@ -63,10 +62,9 @@
                         android:layout_width="match_parent"
                         android:layout_height="match_parent"
                         android:layout_gravity="center"
-                        android:textSize="14dp"
+                        android:padding="5dp"
                         android:textColor="@color/most_button_Used"
-                        android:padding="5dp"/>
-
+                        android:textSize="14dp" />
 
 
                 </LinearLayout>
