--- a/app/src/main/res/layout/single_doctor_list.xml
+++ b/app/src/main/res/layout/single_doctor_list.xml
@@ -1,18 +1,19 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:orientation="vertical"
-    android:layout_margin="7dp">
+    android:orientation="vertical">
 
     <android.support.v7.widget.CardView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:translationZ="10dp"
-        android:elevation="100dp"
-        android:layout_margin="5dp"
-        app:cardCornerRadius="10dp">
+        android:layout_marginHorizontal="5dp"
+        android:layout_marginVertical="8dp"
+        app:cardCornerRadius="10dp"
+        app:cardElevation="4dp">
+
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content">
@@ -22,9 +23,9 @@
                 android:layout_width="0dp"
                 android:layout_height="90dp"
                 android:layout_weight="1"
-                app:srcCompat="@mipmap/stethoscope"
+                android:padding="5dp"
                 android:src="@mipmap/stethoscope"
-                android:padding="5dp"/>
+                app:srcCompat="@mipmap/stethoscope" />
 
             <LinearLayout
                 android:layout_width="0dp"
@@ -41,12 +42,11 @@
                         android:id="@+id/name_id_single_user"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:text="Doctor Name"
-                        android:textColor="@color/colorPrimaryDark"
-                        android:textStyle="bold"
                         android:layout_gravity="center"
                         android:padding="5dp"
-                        />
+                        android:textColor="@color/colorPrimaryDark"
+                        android:textStyle="bold"
+                        tools:text="Doctor Name" />
 
                 </LinearLayout>
 
@@ -60,10 +60,10 @@
                         android:layout_width="match_parent"
                         android:layout_height="match_parent"
                         android:layout_gravity="center"
-                        android:textSize="14dp"
+                        android:padding="5dp"
                         android:textColor="@color/most_button_Used"
-                        android:padding="5dp"/>
-
+                        android:textSize="14dp"
+                        tools:text="Specialization" />
 
 
                 </LinearLayout>
