--- a/app/src/main/res/layout/single_show_appointment.xml
+++ b/app/src/main/res/layout/single_show_appointment.xml
@@ -1,18 +1,17 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:layout_margin="10dp">
+    android:layout_height="wrap_content">
 
-    <android.support.v7.widget.CardView
-        xmlns:card_view="http://schemas.android.com/apk/res-auto"
+    <android.support.v7.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
+        android:id="@+id/single_showBookAppointment"
         android:layout_width="match_parent"
         android:layout_height="90dp"
-        card_view:cardCornerRadius="4dp"
-        card_view:cardElevation="5dp"
-
-        android:id="@+id/single_showBookAppointment">
+        android:layout_marginHorizontal="10dp"
+        android:layout_marginVertical="8dp"
+        app:cardCornerRadius="10dp"
+        app:cardElevation="5dp">
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -21,16 +20,16 @@
 
             <LinearLayout
                 android:layout_width="0dp"
-                android:layout_weight="1"
                 android:layout_height="match_parent"
+                android:layout_weight="1"
                 android:orientation="vertical">
 
                 <ImageView
                     android:layout_width="match_parent"
                     android:layout_height="40dp"
-                    android:src="@mipmap/stethoscope"
+                    android:layout_marginTop="15dp"
                     android:gravity="center"
-                    android:layout_marginTop="15dp"/>
+                    android:src="@mipmap/stethoscope" />
 
                 <TextView
                     android:id="@+id/single_patientName"
@@ -38,49 +37,49 @@
                     android:layout_height="wrap_content"
                     android:gravity="center"
                     android:text="Patient Name"
+                    android:textColor="@color/colorPrimaryDark"
                     android:textSize="15dp"
-                    android:textStyle="bold"
-                    android:textColor="@color/colorPrimaryDark"/>
+                    android:textStyle="bold" />
 
             </LinearLayout>
 
             <LinearLayout
                 android:layout_width="0dp"
-                android:layout_weight="0.5"
                 android:layout_height="match_parent"
+                android:layout_weight="0.5"
                 android:orientation="vertical">
 
                 <ImageView
                     android:id="@+id/cancel_bookedAppointment"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:src="@mipmap/cancel"
+                    android:layout_marginTop="20dp"
                     android:gravity="center"
-                    android:layout_marginTop="20dp"/>
+                    android:src="@mipmap/cancel" />
 
                 <TextView
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
+                    android:layout_marginTop="10dp"
                     android:gravity="center"
                     android:text="Click Here to Cancel Appointment"
                     android:textSize="11dp"
-                    android:textStyle="bold"
-                    android:layout_marginTop="10dp"/>
+                    android:textStyle="bold" />
 
             </LinearLayout>
 
             <LinearLayout
                 android:layout_width="0dp"
-                android:layout_weight="1"
                 android:layout_height="match_parent"
+                android:layout_weight="1"
                 android:orientation="vertical">
 
                 <ImageView
                     android:layout_width="match_parent"
                     android:layout_height="40dp"
-                    android:src="@mipmap/schedule"
+                    android:layout_marginTop="15dp"
                     android:gravity="center"
-                    android:layout_marginTop="15dp"/>
+                    android:src="@mipmap/schedule" />
 
                 <TextView
                     android:id="@+id/single_patient_time"
@@ -88,10 +87,9 @@
                     android:layout_height="wrap_content"
                     android:gravity="center"
                     android:text="Appointment Time"
-                    android:textSize="15dp"
-                    android:textStyle="bold"
                     android:textColor="@color/skyBlue"
-                    />
+                    android:textSize="15dp"
+                    android:textStyle="bold" />
 
             </LinearLayout>
 
