--- a/app/src/main/res/layout/fragment_specialization.xml
+++ b/app/src/main/res/layout/fragment_specialization.xml
@@ -1,8 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.v7.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:focusable="true"
+    android:focusableInTouchMode="true"
     tools:context="com.example.aman.hospitalappointy.home.fragments.DoctorFragment">
 
 
@@ -36,4 +38,4 @@
 
 
     </LinearLayout>
-</FrameLayout>
+</android.support.v7.widget.LinearLayoutCompat>
